Add deprecation warnings to docs.
Signed-off-by: Jörgen Maas <jorgen.maas@gmail.com>

--- a/manuals/2.8.0/2/2_-_Installing_From_Packages.html
+++ b/manuals/2.8.0/2/2_-_Installing_From_Packages.html
@@ -128,7 +128,7 @@ var WRInitTime=(new Date()).getTime();
    <h1>Installing Cobbler From Packages</h1>
 <p>Cobbler is available for installation for many Linux variants through their native packaging systems.</p>
 
-<p>The Cobbler project also provides packages: http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/</p>
+<p>The Cobbler project also provides packages: http://cobbler.github.io/downloads/2.8.x.html</p>
 
      <hr>
      <div id="disqus_thread"></div>
