--- a/manuals/2.8.0/Appendix/A_-_S390_Support.html
+++ b/manuals/2.8.0/Appendix/A_-_S390_Support.html
@@ -126,6 +126,9 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.8.0">2.8.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.8.0/Appendix">Appendix</a> <span class="divider">/</span></li><li class="active">Cobbler Manual</li></ul>
    <h1>Cobbler Manual</h1>
+<div class="alert alert-info alert-block"><b>Warning:</b> This feature has been deprecated and will not be available in Cobbler 3.0.</div>
+
+
 <h3>Introduction</h3>
 
 <p>Cobbler includes support for provisioning Linux on virtualized guests under z/VM, the System z hypervisor.</p>
@@ -259,7 +262,7 @@ NETMASK=255.255.255.0 PORTNAME=UNASSIGNED ramdisk_size=40000 ro cms
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li></ul></div>
   </div>
  </div>
 </div>
