--- a/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html
+++ b/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html
@@ -132,7 +132,7 @@ var WRInitTime=(new Date()).getTime();
 
 <p>Somewhat unintuitively, LiveCD's are booted by transforming the CD ISO's to kernel+initrd files.</p>
 
-<p>Take the livecd and install livecd-tools.  You may need a recent Fedora (F9+) to find livecd-tools.  What we are about to do is convert the live image to something that is PXEable.  It will produce a kernel image and a VERY large initrd which essnetially contains the entire ISO.  Once this is done it is PXE-bootable, but we still have to provide the right kernel arguments.</p>
+<p>Take the livecd and install livecd-tools.  You may need a recent Fedora to find livecd-tools.  What we are about to do is convert the live image to something that is PXEable.  It will produce a kernel image and a VERY large initrd which essnetially contains the entire ISO.  Once this is done it is PXE-bootable, but we still have to provide the right kernel arguments.</p>
 
 <pre><code>livecd-iso-to-pxeboot live-image.iso
 </code></pre>
@@ -198,7 +198,7 @@ cobbler profile add --name=liveF9 --distro=liveF9
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li></ul></div>
   </div>
  </div>
 </div>
