--- a/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html
+++ b/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html
@@ -184,7 +184,7 @@ installation tasks.</p>
 
   </div>
   <div class="span4">
-<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li></ul></div>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/2.8.0/Appendix/B_-_Power-PC_Support.html">B - Power-PC Support</a></li><li><a href="/manuals/2.8.0/Appendix/C_-_Tips_for_RHN.html">C - Tips for RHN</a></li><li><a href="/manuals/2.8.0/Appendix/D_-_Memtest.html">D - Memtest</a></li><li><a href="/manuals/2.8.0/Appendix/E_-_Anaconda_Monitoring.html">E - Anaconda Monitoring</a></li><li><a href="/manuals/2.8.0/Appendix/F_-_System_Retirement.html">F - System Retirement</a></li><li><a href="/manuals/2.8.0/Appendix/H_-_Clonezilla_Integration.html">H - Clonezilla Integration</a></li><li><a href="/manuals/2.8.0/Appendix/A_-_S390_Support.html">A - S390 Support</a></li><li><a href="/manuals/2.8.0/Appendix/G_-_Booting_Live_CDs.html">G - Booting Live CDs</a></li></ul></div>
   </div>
  </div>
 </div>
