--- a/manuals/2.8.0/4/3/3_-_Func_Integration.html
+++ b/manuals/2.8.0/4/3/3_-_Func_Integration.html
@@ -126,9 +126,8 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.8.0">2.8.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.8.0/4_-_Advanced_Topics.html">4</a> <span class="divider">/</span></li><li><a href="/manuals/2.8.0/4/3_-_Configuration_Management.html">3</a> <span class="divider">/</span></li><li class="active">Func Integration</li></ul>
    <h1>Func Integration</h1>
-<p><aside class="warning">
-THIS FEATURE HAS BEEN DEPRECATED AND WILL NOT BE AVAILABLE IN COBBLER 3.0
-</aside></p>
+<div class="alert alert-info alert-block"><b>Warning:</b> This feature has been deprecated and will not be available in Cobbler 3.0.</div>
+
 
 <p>Func is a neat tool, (which, in full disclosure, Michael had a part
 in creating). Read all about it at
