Add Debian/Ubuntu packages to downloads.

--- a/downloads/2.8.x.html
+++ b/downloads/2.8.x.html
@@ -147,6 +147,12 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Tumbleweed/">openSUSE Tumbleweed</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/ScientificLinux_6/">Scientific Linux 6</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/ScientificLinux_7/">Scientific Linux 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Debian_7.0/">Debian 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Debian_8.0/">Debian 8</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_12.04/">Ubuntu 12.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_14.04/">Ubuntu 14.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.04/">Ubuntu 16.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.10/">Ubuntu 16.10</a></li>
 </ul>
 
 
