Add SLE12 packages to downloads.

--- a/downloads/2.8.x.html
+++ b/downloads/2.8.x.html
@@ -153,6 +153,9 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_14.04/">Ubuntu 14.04</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.04/">Ubuntu 16.04</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.10/">Ubuntu 16.10</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12/">SLES 12.0</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP1/">SLES 12.1</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP2/">SLES 12.2</a></li>
 </ul>
 
 
