Fix wrong paths in downloads 2.8.x

--- a/downloads/2.8.x.html
+++ b/downloads/2.8.x.html
@@ -133,10 +133,10 @@ var WRInitTime=(new Date()).getTime();
 <h2>Packages</h2>
 
 <ul>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_CentOS-6/">CentOS 6</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_CentOS-7/">CentOS 7</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RedHat_RHEL-6/">RHEL 6</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RedHat_RHEL-7/">RHEL 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_6/">CentOS 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_7/">CentOS 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_6/">RHEL 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_7/">RHEL 7</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_23/">Fedora 23</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_24/">Fedora 24</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_13.2/">openSUSE 13.2</a></li>
