Update downloads page.

--- a/downloads/2.8.x.html
+++ b/downloads/2.8.x.html
@@ -126,38 +126,14 @@ var WRInitTime=(new Date()).getTime();
 <h2>Source</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.8.1">Cobbler 2.8.1</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.8.0">Cobbler 2.8.0</a></li>
 </ul>
 
 
 <h2>Packages</h2>
 
-<ul>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_6/">CentOS 6</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_7/">CentOS 7</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_6/">RHEL 6</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_7/">RHEL 7</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_23/">Fedora 23</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_24/">Fedora 24</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_13.2/">openSUSE 13.2</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Factory_ARM/">openSUSE Factory ARM</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Factory_PowerPC/">openSUSE Factory PowerPC</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Leap_42.1/">openSUSE Leap 42.1</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Leap_42.2/">openSUSE Leap 42.2</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_Tumbleweed/">openSUSE Tumbleweed</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/ScientificLinux_6/">Scientific Linux 6</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/ScientificLinux_7/">Scientific Linux 7</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Debian_7.0/">Debian 7</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Debian_8.0/">Debian 8</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_12.04/">Ubuntu 12.04</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_14.04/">Ubuntu 14.04</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.04/">Ubuntu 16.04</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.10/">Ubuntu 16.10</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12/">SLES 12.0</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP1/">SLES 12.1</a></li>
-<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP2/">SLES 12.2</a></li>
-</ul>
-
+<p>Due to limited resources we can't provide binary packages any longer!</p>
 
 </div> <!-- end wrap -->
 
