Corrige typo pasword -> password

--- a/manuals/2.8.0/5/4_-_Locking_Down_Cobbler.html
+++ b/manuals/2.8.0/5/4_-_Locking_Down_Cobbler.html
@@ -184,7 +184,7 @@ you about to ensure everything works according to plan.</p>
 <p>Also note, you may run into some problems if you need to relocate
 your <code>/var/www elsewhere</code>, which most users should not need to do.</p>
 
-<h2>Default Paswords</h2>
+<h2>Default Passwords</h2>
 
 <p>Run "cobbler check" and it will warn you if any of the sample
 kickstarts still have "cobbler" as the password. If you are using
