Dirty update as jekyll is cufrrently broken.

--- a/community.html
+++ b/community.html
@@ -151,7 +151,7 @@ var WRInitTime=(new Date()).getTime();
 
 <h2>Twitter</h2>
 
-<p>We use the twitter account <a href="http://twitter.com/#!/cobblerista">@cobblerista</a> to post notifications of new versions and other relevant information.</p>
+<p>We use the twitter account <a href="http://twitter.com/#!/cobblerproject">@cobblerproject</a> to post notifications of new versions and other relevant information.</p>
 
 </div> <!-- end wrap -->
 
