Update mailinglist information.

--- a/community.html
+++ b/community.html
@@ -129,9 +129,7 @@ var WRInitTime=(new Date()).getTime();
 
 <h2>Mailing List</h2>
 
-<p>The primary mailing list for Cobbler is <a href="https://fedorahosted.org/mailman/listinfo/cobbler">cobbler@lists.fedorahosted.org</a>.</p>
-
-<p>Development questions/code should be sent here: <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">cobbler-devel@lists.fedorahosted.org</a>. If you're sending patches for review, please be sure to read the "Developer Documentation" section of the manual first.</p>
+<p>The primary mailing list for Cobbler is <a href="https://groups.google.com/forum/#!forum/cobbler-users">cobbler-users@googlegroups.com</a>.</p>
 
 <h2>Github</h2>
 
