--- a/manuals/2.8.0/3/5_-_Kickstart_Templating.html
+++ b/manuals/2.8.0/3/5_-_Kickstart_Templating.html
@@ -243,7 +243,7 @@ settings, timezones, etc.</p>
 several different kickstart templates, cobbler snippets are for
 you.</p>
 
-<p>Read more at <a href="snippets">Snippets</a></p>
+<p>Read more at <a href="Snippets">snippets</a></p>
 
 <p>That page also includes some user contributed snippet examples --
 some of which make some heavy use of the Cheetah template engine.
