More fixes to manual

--- a/manuals/2.8.0/3/5_-_Kickstart_Templating.html
+++ b/manuals/2.8.0/3/5_-_Kickstart_Templating.html
@@ -375,7 +375,7 @@ about Cobbler templates all the network info out for you.</p>
 <p>You can optionally expose custom-written functions to all Cheetah
 templates. To see a list of these functions you have configured for
 your site (Cobbler doesn't currently ship with any) and/or add new
-functions, see <strong>UNDEFINED REFERENCE (Extending Cheetah, meta=2.8.0)</strong>.</p>
+functions, see <a href="/manuals/2.8.0/4/4/3_-_Extending_Cheetah.html">Extending Cheetah</a>.</p>
 
 <h2>Raw Escaping</h2>
 
@@ -511,9 +511,6 @@ following commands:</p>
 
 <pre><code>cobbler system getks --name=system-name
 </code></pre>
-
-<p>(see <a href="/cobbler/wiki/ModPythonDetails">ModPythonDetails</a> for the
-URLs the installer actually uses to get to this content)</p>
 
 <h2>Calling Python Code</h2>
 
