Fix broken links on Locking Down Cobbler (V2.8.0).

--- a/manuals/2.8.0/5/3_-_Web_Authorization.html
+++ b/manuals/2.8.0/5/3_-_Web_Authorization.html
@@ -151,7 +151,7 @@ semantics given to groups and any listed user can access cobbler to make any cha
 would be if you wanted to <a href="Kerberos">authenticate admins against Kerberos</a> but kerberos contained other passwords and you wanted to allow only users
 present in your whitelist to be able to make changes.</p>
 
-<h3>Ownership</h3>
+<h3 id="ownership">Ownership</h3>
 
 <pre><code>[authorization]
 module = authz_ownership
