Multiple small spacing and content improvements

--- a/index.html
+++ b/index.html
@@ -75,27 +75,29 @@ users:
                     </div>
                     <div class="card">
                         <div class="card-header">Thanks to all our supporters!</div>
-                        <div class="card-text">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="https://spilgames.com/"><img src="/images/supporters/spilgames.png"/></a>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <div class="container">
+                                    <div class="row py-3">
+                                        <div class="col">
+                                            <a href="https://spilgames.com/"><img src="/images/supporters/spilgames.png"/></a>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.quantcast.com/"><img src="/images/supporters/quantcast.png"/></a>
+                                        </div>
                                     </div>
-                                    <div class="col">
-                                        <a href="https://www.quantcast.com/"><img src="/images/supporters/quantcast.png"/></a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="https://getfedora.org/"><img src="/images/supporters/fedora.png"/></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.puzzle.ch/"><img src="/images/supporters/puzzleitc.png"/></a>
+                                    <div class="row pb-3">
+                                        <div class="col">
+                                            <a href="https://getfedora.org/"><img src="/images/supporters/fedora.png"/></a>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.puzzle.ch/"><img src="/images/supporters/puzzleitc.png"/></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <a class="btn btn-primary" href="/supporters.html">view all supporters</a>
                         </div>
-                        <a class="btn btn-primary" href="/supporters.html">view all supporters</a>
                     </div>
                 </div>
             </div>
