--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@ title: Search
     <input type="submit" value="search">
 </form>
 
-<ul id="search-results"></ul>
+<ul id="search-results" class="py-3"></ul>
 
 <script>
     window.store = [
