Landing: Add horizontal rulers again

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ users:
     </div>
 </div>
 
-<div class="container">
+<div class="container mt-3">
     <div class="row align-items-center">
         <div class="col-3 text-center">
             <img class="img-thumbnail" src="/images/gears.jpg" alt="gears"/>
@@ -118,6 +118,7 @@ users:
                 various hypervisors.</p>
         </div>
     </div>
+    <hr/>
     <div class="row align-items-center">
         <div class="col-3 text-center">
             <object class="bi img-thumbnail" data="/images/recycle.svg" height="160px" width="160px"></object>
@@ -133,6 +134,7 @@ users:
                 use it wherever they need it via a simple include, all while managing the content in just one place.</p>
         </div>
     </div>
+    <hr/>
     <div class="row align-items-center">
         <div class="col-3 text-center">
             <div id="usingCobblerCarousel" class="carousel slide img-thumbnail" data-bs-ride="carousel" data-interval="2000">
