--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ users:
                 <h4>Who's using Cobbler?</h4>
                 <p>These are just a small sample of the hundreds of companies, universities and government orgnaizations
                     that rely on Cobbler every day to build their infrastructure.</p>
-                <div class="viewall"><a href="/users.html"><i class="icon-double-angle-right"> view more</i></a></div>
+                <div class="viewall"><a href="/users.html"><i class="fas fa-angle-double-right"></i> view more</i></a></div>
             </div>
         </div>
     </div>
