Further improve the layout

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ users:
         </div>
     </div>
     <hr/>
-    <div class="row align-items-center">
+    <div class="row align-items-center pb-3">
         <div class="col-3 text-center">
             <div id="usingCobblerCarousel" class="carousel slide img-thumbnail" data-bs-ride="carousel" data-interval="2000">
                 <div class="carousel-inner">
@@ -160,7 +160,9 @@ users:
                 <h4>Who's using Cobbler?</h4>
                 <p>These are just a small sample of the hundreds of companies, universities and government orgnaizations
                     that rely on Cobbler every day to build their infrastructure.</p>
-                <div class="viewall"><a href="/users.html"><i class="fas fa-angle-double-right"></i> view more</i></a></div>
+                <div class="viewall">
+                    <a href="/users.html"><i class="fas fa-angle-double-right"></i> view more</i></a>
+                </div>
             </div>
         </div>
     </div>
