--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ users:
                     have to hop between many various commands and applications when deploying new systems, and, in some
                     cases, changing existing ones. Cobbler can help with provisioning, managing DNS and DHCP, package
                     updates, power management, configuration management orchestration, and much more.</p>
-                <p><a href="/quickstart/" class="btn btn-info btn-large">Get Started Now!</a></p>
+                <p><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html"
+                      class="btn btn-primary btn-large">Get Started Now!</a></p>
             </div>
             <div class="col-4">
                 <div class="d-grid gap-3">
